Added keys datasets

--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
         <div class="container">
             <div class="calculator">
                 <div class="display">
-                    <div class="input">100 + 50</div>
-                    <div class="result">150</div>
+                    <div class="input"></div>
+                    <div class="result"></div>
                 </div>
                 <div class="keyboard">
-                    <div class="key clear"><span>C</span></div>
-                    <div class="key delete"><span>Del</span></div>
-                    <div class="key percentage"><span>%</span></div>
-                    <div class="key operator"><span>&divide;</span></div>
-                    <div class="key"><span>1</span></div>
-                    <div class="key"><span>2</span></div>
-                    <div class="key"><span>3</span></div>
-                    <div class="key operator"><span>&times;</span></div>
-                    <div class="key"><span>4</span></div>
-                    <div class="key"><span>5</span></div>
-                    <div class="key"><span>6</span></div>
-                    <div class="key operator"><span>-</span></div>
-                    <div class="key"><span>7</span></div>
-                    <div class="key"><span>8</span></div>
-                    <div class="key"><span>9</span></div>
-                    <div class="key operator"><span>+</span></div>
-                    <div class="key decimal"><span>.</span></div>
-                    <div class="key"><span>0</span></div>
-                    <div class="key equal"><span>=</span></div>
+                    <div class="key clear" data-key="clear"><span>C</span></div>
+                    <div class="key delete" data-key="delete"><span>Del</span></div>
+                    <div class="key percentage" data-key="/100"><span>%</span></div>
+                    <div class="key operator" data-key="/"><span>&divide;</span></div>
+                    <div class="key" data-key="1"><span>1</span></div>
+                    <div class="key" data-key="2"><span>2</span></div>
+                    <div class="key" data-key="3"><span>3</span></div>
+                    <div class="key operator" data-key="*"><span>&times;</span></div>
+                    <div class="key" data-key="4"><span>4</span></div>
+                    <div class="key" data-key="5"><span>5</span></div>
+                    <div class="key" data-key="6"><span>6</span></div>
+                    <div class="key operator" data-key="-"><span>-</span></div>
+                    <div class="key" data-key="7"><span>7</span></div>
+                    <div class="key" data-key="8"><span>8</span></div>
+                    <div class="key" data-key="*"><span>9</span></div>
+                    <div class="key operator" data-key="+"><span>+</span></div>
+                    <div class="key decimal" data-key="."><span>.</span></div>
+                    <div class="key" data-key="0"><span>0</span></div>
+                    <div class="key equal" data-key="="><span>=</span></div>
                 </div>
             </div>
         </div>
