Added brackets keys

--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
                     <div class="result"></div>
                 </div>
                 <div class="keyboard">
-                    <div class="key clear" data-key="clear"><span>C</span></div>
-                    <div class="key delete" data-key="delete"><span>Del</span></div>
+                    <div class="clear">
+                        <div class="key all-clear" data-key="clear"><span>C</span></div>
+                        <div class="key delete" data-key="delete"><span>Del</span></div>
+                    </div>                    
+                    <div class="brackets">
+                        <div class="key bracket" data-key="("><span>&#40;</span></div>
+                        <div class="key bracket" data-key=")"><span>&#41;</span></div>
+                    </div>
                     <div class="key percentage" data-key="/100"><span>%</span></div>
                     <div class="key operator" data-key="/"><span>&divide;</span></div>
                     <div class="key" data-key="1"><span>1</span></div>
